# server-vigil

./: README.md  server-vigil.code-workspace
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml  server-monitor.code-workspace
.devcontainer/agent-devcontainer/: devcontainer.json
.devcontainer/manager-devcontainer/: devcontainer.json
agent/: Cargo.toml
agent/src/: main.rs
manager/: .eslintrc.cjs  .prettierrc  drizzle.config.ts  package-lock.json  package.json  pnpm-lock.yaml  postcss.config.cjs  svelte.config.js  tailwind.config.cjs  vite.config.ts
manager/drizzle/: 0000_aromatic_captain_marvel.sql  0000_daily_skin.sql
manager/drizzle/meta/: 0000_snapshot.json  _journal.json
manager/src/: app.d.ts  app.html  app.pcss
manager/src/lib/assets/: Logo.svelte  NoContent.svelte
manager/src/lib/assets/icons/: CheckSquared.svelte  Copy.svelte  Home.svelte  Server.svelte  Sliders.svelte  X.svelte
manager/src/lib/assets/translations/: de-DE.json  de-GANS.json  de-GAY.json  en-US.json  (+1 more)
manager/src/lib/components/: Breadcrumbs.svelte  Drawer.svelte  LangSwitch.svelte  MachineCard.svelte  Navbar.svelte  NoContent.svelte  Sidebar.svelte  ThemeSwitch.svelte
manager/src/lib/server/: db.ts  middleware.ts  schema.ts  validator.ts
manager/src/lib/stores/: breadcrumbs.store.ts  breadcrumbs.ts  dictionary.store.ts  i18n.store.ts  index.ts  lang.store.ts
manager/src/params/: lang.ts
manager/src/routes/: +error.svelte  +layout.svelte
manager/src/routes/(sidebar)/: +layout.svelte  +page.svelte
manager/src/routes/(ui)/: +error.svelte  +layout.svelte
(+38 files in other folders)
